--- a/OCR_Tool/OCR_Tool.csproj
+++ b/OCR_Tool/OCR_Tool.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Capture.Designer.cs">
       <DependentUpon>Capture.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models.cs" />
     <Compile Include="OCR.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +93,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Config\" />
+    <Folder Include="Logs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
