--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ OCR_Tool/bin/Debug/OCR_Tool.pdb
 OCR_Tool/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /.vs
 /OCR_Tool/packages
+/OCR_Tool/.vs/OCR_Tool/v15
